2003-02-14  John Levon  <levon@movementarian.org>

	* BufferView_pimpl.C:
	* bufferlist.C:
	* buffer.C:
	* converter.C:
	* lyx_cb.C:
	* lyxfunc.C: change prohibit/allowInput to busy(bool), as
	  it's a more accurate name. Remove some pointless uses.

2003-02-14  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* text2.C (LyXText): change order of initilizers to shut off
	warnings 

2003-02-14  John Levon  <levon@movementarian.org>

	* buffer.C: use ParIterator for getParFromID()

	* paragraph.h:
	* paragraph.C:
	* paragraph_pimpl.h:
	* paragraph_pimpl.C: remove unused getParFromID()

2003-02-14  John Levon  <levon@movementarian.org>

	* buffer.C: remove some very old #if 0'd parse code

2003-02-13  John Levon  <levon@movementarian.org>

	* text.h:
	* text.C:
	* text2.C: move hfillExpansion(), numberOfSeparators(),
	  rowLast(), rowLastPrintable(), numberofHfills(), 
	  numberOfLabelHfills() ...

	* lyxrow.h:
	* lyxrow.C: ... to member functions here.

	* paragraph.h:
	* paragraph.C:
	* lyxtext.h:
	* text.C: remove LyXText::beginningOfMainBody(), and call
	  p->beginningOfMainBody() directly. Move the check for
	  LABEL_MANUAL into the latter.

	* text.h:
	* text.C:
	* text2.C:
	* vspace.C:
	* BufferView.h:
	* BufferView.C: make defaultHeight() be a free defaultRowHeight()

	* text.h:
	* text.C:
	* text2.C:
	* text3.C:
	* frontends/screen.C: move bv_owner private, introduce isTopLevel()
	  to make it clear we're testing for outmost-lyxtext vs. inset's lyxtext

2003-02-13  John Levon  <levon@movementarian.org>

	* CutAndPaste.C: remove debug

2003-02-11  Jean-Marc Lasgouttes  <lasgouttes@freesurf.fr>

	* paragraph.C (asString): remove two unused variables

	* lyxtextclass.C (readTitleType): 
	(Read): 
	(LyXTextClass): handle new members titletype_ and titlename_

	* buffer.C (latexParagraphs): honor LyXTextClass::titletype

2003-02-09  John Levon  <levon@movementarian.org>

	* buffer.h:
	* buffer.C: replace hand-coded list with a map for the dep clean
