@@ -1,5 +1,9 @@
 2003-02-14  John Levon  <levon@movementarian.org>
 
+	* insettabular.C: changed method names in tabular.C
+
+2003-02-14  John Levon  <levon@movementarian.org>
+
 	* inset.h:
 	* inset.C:
 	* insetcollapsable.h:
