@@ -1,5 +1,10 @@
 2003-02-14  John Levon  <levon@movementarian.org>
 
+	* tabular.h:
+	* tabular.C: better method names
+
+2003-02-14  John Levon  <levon@movementarian.org>
+
 	* BufferView_pimpl.C:
 	* bufferlist.C:
 	* buffer.C:
